# chat_ABob

./: CMakeLists.txt  README.md  example.py  gui.cpp  gui.hpp  main.cpp  main.py  message.hpp  proxy.py  run.py  user.cpp  user.hpp
GUI/: chat.cpp  chat.hpp  gui.cpp  gui.hpp  terminal.hpp  window.hpp
Link/: link.cpp  link.hpp
Server/: TCP_sender.py  TCP_server.py  client.py  server.py  special_json.py  udp_reciever.py  udp_sender.py  udp_server.py
Server/ssl/: cert.pem  key.pem
server/: chatlist.db  client.py  database.db  database.db-journal  graph.py  graph1.py  interface.py  server.py  test.py  test_all.py  userlist.db
server/src/: chatlist.py  dump.py  myjson.py  mysql.py  user.py  userlist.py
